# ChangeLog for app-crypt/shash
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/shash/ChangeLog,v 1.3 2004/06/24 21:38:01 agriffis Exp $

  07 Jun 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  shash-0.2.6.ebuild:
  Added DEPENDS. marked stable

*shash-0.2.6 (20 Jan 2004)

  20 Jan 2004; Robin H. Johnson <robbat2@gentoo.org> shash-0.2.6.ebuild:
  initial commit, ebuild by Sven Wegener <sven.wegener@stealer.net>, bug #38108
