@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/shash
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/shash/ChangeLog,v 1.3 2004/06/24 21:38:01 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/shash/ChangeLog,v 1.4 2004/07/15 19:10:49 swegener Exp $
+
+  15 Jul 2004; Sven Wegener <swegener@gentoo.org> metadata.xml:
+  Taking over primary maintainership.
 
   07 Jun 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
   shash-0.2.6.ebuild:
